--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,9 +16,11 @@
             app:layout_constraintTop_toTopOf="parent" android:id="@+id/linearLayout">
         <TextView
                 android:text="주문 목록"
+                android:fontFamily="@font/nanumsquareroundotfr"
+                android:textColor="@color/warmgray"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" android:id="@+id/tv_orderlist" android:layout_weight="1"
-                android:textSize="18sp" app:layout_constraintEnd_toEndOf="parent"
+                android:textSize="17sp" app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"/>
     </android.support.constraint.ConstraintLayout>
