--- a/app/src/main/res/layout/dialog_oneline_message.xml
+++ b/app/src/main/res/layout/dialog_oneline_message.xml
@@ -1,27 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
                                              xmlns:app="http://schemas.android.com/apk/res-auto"
                                              xmlns:tools="http://schemas.android.com/tools" android:layout_width="300dp"
-                                             android:layout_height="120dp" android:background="@drawable/border">
+                                             android:layout_height="120dp" android:background="@drawable/order_confirm_toast_message">
 
-    <android.support.constraint.ConstraintLayout
-            android:layout_width="80dp"
-            android:layout_height="32dp" app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="24dp" android:background="@drawable/border"
-            android:id="@+id/btn_oneline_message_diaglog_ok">
 
-        <TextView
-                android:text="확인"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent" android:id="@+id/textView4"/>
-    </android.support.constraint.ConstraintLayout>
     <TextView
+            android:textColor="@color/white"
+            android:textSize="18sp"
             android:text="주문 접수 알림이 전송되었습니다."
+
+
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="24dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="48dp"
             app:layout_constraintEnd_toEndOf="parent" android:id="@+id/tv_oneline_message_dialog_message"/>
 </android.support.constraint.ConstraintLayout>
