--- a/app/src/main/res/layout/dialog_waiting_accept.xml
+++ b/app/src/main/res/layout/dialog_waiting_accept.xml
@@ -3,33 +3,9 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="400dp" tools:layout_editor_absoluteY="25dp"
-
-        android:focusable="true"
-        android:focusableInTouchMode="true" android:layout_marginLeft="40dp" android:layout_marginRight="40dp">
+        android:layout_height="340dp" tools:layout_editor_absoluteY="25dp">
 
 
-    <android.support.constraint.ConstraintLayout
-            android:layout_width="211dp"
-            android:layout_height="46dp"
-            android:id="@+id/constraintLayout5"
-            android:background="@drawable/border"
-            android:layout_marginTop="12dp"
-            app:layout_constraintTop_toBottomOf="@+id/linear3" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
-            android:layout_marginStart="8dp">
-
-        <EditText
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:inputType="textPersonName"
-                android:ems="10"
-                android:id="@+id/et_waiting_accept_dialog_direct"
-                android:hint="직접 입력"
-                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"/>
-    </android.support.constraint.ConstraintLayout>
     <LinearLayout
             android:orientation="horizontal"
             android:layout_width="wrap_content"
@@ -43,11 +19,14 @@
                 android:layout_width="100dp"
                 android:layout_height="64dp"
                 android:id="@+id/btn_waiting_accept_dialog_5m"
-                tools:layout_editor_absoluteY="51dp" tools:layout_editor_absoluteX="196dp"
-                android:background="@drawable/border">
+                tools:layout_editor_absoluteY="51dp"
+                tools:layout_editor_absoluteX="196dp"
+
+                android:background="@drawable/waiting_minute">
 
             <TextView
                     android:text="5분"
+                    android:textColor="@color/white"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" android:id="@+id/textView3"
                     app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
@@ -61,11 +40,12 @@
                 android:layout_width="100dp"
                 android:layout_height="64dp"
                 android:id="@+id/btn_waiting_accept_dialog_10m"
-                android:background="@drawable/border" tools:layout_editor_absoluteY="51dp"
+                android:background="@drawable/waiting_minute" tools:layout_editor_absoluteY="51dp"
                 tools:layout_editor_absoluteX="84dp">
 
             <TextView
                     android:text="10분"
+                    android:textColor="@color/white"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
@@ -85,10 +65,11 @@
         <android.support.constraint.ConstraintLayout
                 android:layout_width="100dp"
                 android:layout_height="64dp"
-                android:id="@+id/btn_waiting_accept_dialog_15m" android:background="@drawable/border"
+                android:id="@+id/btn_waiting_accept_dialog_15m" android:background="@drawable/waiting_minute"
                 tools:layout_editor_absoluteY="51dp" tools:layout_editor_absoluteX="196dp">
 
             <TextView
+                    android:textColor="@color/white"
                     android:text="15분"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
@@ -102,11 +83,12 @@
                 android:layout_width="100dp"
                 android:layout_height="64dp"
                 android:id="@+id/btn_waiting_accept_dialog_20m"
-                android:background="@drawable/border" tools:layout_editor_absoluteY="51dp"
+                android:background="@drawable/waiting_minute" tools:layout_editor_absoluteY="51dp"
                 tools:layout_editor_absoluteX="84dp">
 
             <TextView
                     android:text="20분"
+                    android:textColor="@color/white"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
@@ -125,12 +107,13 @@
         <android.support.constraint.ConstraintLayout
                 android:layout_width="100dp"
                 android:layout_height="64dp"
-                android:id="@+id/btn_waiting_accept_dialog_25m" android:background="@drawable/border"
+                android:id="@+id/btn_waiting_accept_dialog_25m" android:background="@drawable/waiting_minute"
                 tools:layout_editor_absoluteY="51dp" tools:layout_editor_absoluteX="196dp">
 
             <TextView
                     android:text="25분"
                     android:layout_width="wrap_content"
+                    android:textColor="@color/white"
                     android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent" android:id="@+id/textView11" android:textSize="24sp"/>
@@ -142,12 +125,13 @@
                 android:layout_width="100dp"
                 android:layout_height="64dp"
                 android:id="@+id/btn_waiting_accept_dialog_30m"
-                android:background="@drawable/border" tools:layout_editor_absoluteY="51dp"
+                android:background="@drawable/waiting_minute" tools:layout_editor_absoluteY="51dp"
                 tools:layout_editor_absoluteX="84dp">
 
             <TextView
                     android:text="30분"
                     android:layout_width="wrap_content"
+                    android:textColor="@color/white"
                     android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent" android:id="@+id/textView10" android:textSize="24sp"/>
@@ -155,8 +139,11 @@
     </LinearLayout>
     <TextView
             android:text="예상 제조 완료 시간을 선택해주세요."
+            android:fontFamily="@font/nanumsquareroundotfr"
+            android:textSize="15dp"
+            android:textColor="#707070"
             android:layout_width="wrap_content"
-            android:layout_height="15dp"
+            android:layout_height="19dp"
             android:id="@+id/textView2"
             android:layout_marginTop="16dp"
             app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
@@ -171,20 +158,22 @@
             android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="12dp" app:layout_constraintTop_toBottomOf="@+id/constraintLayout5">
+            android:layout_marginTop="12dp"
+            app:layout_constraintTop_toBottomOf="@+id/linear3">
         <android.support.constraint.ConstraintLayout
                 android:layout_width="100dp"
                 android:layout_height="48dp"
                 android:id="@+id/btn_waiting_accept_dialog_cancle"
-                android:background="@drawable/border"
+                android:background="#eeeeee"
                 tools:layout_editor_absoluteY="261dp" tools:layout_editor_absoluteX="84dp">
 
-            <TextView
-                    android:text="취소"
+            <EditText
+                    android:hint="시간입력"
+
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent" android:id="@+id/textView8"/>
+                    app:layout_constraintEnd_toEndOf="parent" android:id="@+id/et_dialog_waiting_writeminute"/>
         </android.support.constraint.ConstraintLayout>
         <Space
                 android:layout_width="12dp"
@@ -193,15 +182,15 @@
                 android:layout_width="100dp"
                 android:layout_height="48dp"
                 android:id="@+id/btn_waiting_accept_dialog_ok"
-                android:background="@drawable/border"
+                android:background="@drawable/waiting_minute"
                 tools:layout_editor_absoluteY="261dp" tools:layout_editor_absoluteX="196dp">
 
             <TextView
-                    android:text="확인"
+                    android:text="직접입력"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent" android:id="@+id/textView9"/>
+                    app:layout_constraintEnd_toEndOf="parent" android:id="@+id/tv_dialog_waiting_minuteselfselect"/>
         </android.support.constraint.ConstraintLayout>
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
