--- a/app/src/main/res/layout/dialog_waiting_deny.xml
+++ b/app/src/main/res/layout/dialog_waiting_deny.xml
@@ -15,17 +15,21 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             app:layout_constraintTop_toBottomOf="@+id/textView2" android:id="@+id/linearLayout2"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
             android:layout_marginStart="8dp">
         <android.support.constraint.ConstraintLayout
                 android:layout_width="100dp"
                 android:layout_height="64dp"
-                android:id="@+id/btn_waiting_deny_dialog_outofstock" android:background="@drawable/border"
+                android:id="@+id/btn_waiting_deny_dialog_outofstock" android:background="@drawable/waiting_order_border"
                 tools:layout_editor_absoluteY="51dp" tools:layout_editor_absoluteX="196dp">
 
             <TextView
                     android:text="재료 소진"
+                    android:textColor="@color/white"
+                    android:textSize="20sp"
+                    android:fontFamily="@font/nanumsquareroundotfr"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" android:id="@+id/textView3"
                     app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
@@ -38,11 +42,14 @@
                 android:layout_width="100dp"
                 android:layout_height="64dp"
                 android:id="@+id/btn_waiting_deny_dialog_delay"
-                android:background="@drawable/border" tools:layout_editor_absoluteY="51dp"
+                android:background="@drawable/waiting_order_border" tools:layout_editor_absoluteY="51dp"
                 tools:layout_editor_absoluteX="84dp">
 
             <TextView
                     android:text="주문 지연"
+                    android:textSize="20sp"
+                    android:textColor="@color/white"
+                    android:fontFamily="@font/nanumsquareroundotfr"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
@@ -62,11 +69,14 @@
         <android.support.constraint.ConstraintLayout
                 android:layout_width="100dp"
                 android:layout_height="64dp"
-                android:id="@+id/btn_waiting_deny_dialog_incorrect" android:background="@drawable/border"
+                android:id="@+id/btn_waiting_deny_dialog_incorrect" android:background="@drawable/waiting_order_border"
                 tools:layout_editor_absoluteY="51dp" tools:layout_editor_absoluteX="196dp">
 
             <TextView
-                    android:text="고객 정보\n 부정확"
+                    android:text="고객 정보\n   부정확"
+                    android:textSize="20sp"
+                    android:fontFamily="@font/nanumsquareroundotfr"
+                    android:textColor="@color/white"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
@@ -79,12 +89,15 @@
                 android:layout_width="100dp"
                 android:layout_height="64dp"
                 android:id="@+id/btn_waiting_deny_dialog_storeend"
-                android:background="@drawable/border" tools:layout_editor_absoluteY="51dp"
+                android:background="@drawable/waiting_order_border" tools:layout_editor_absoluteY="51dp"
                 tools:layout_editor_absoluteX="84dp">
 
             <TextView
                     android:text="영업 종료"
                     android:layout_width="wrap_content"
+                    android:textSize="20sp"
+                    android:textColor="@color/white"
+                    android:fontFamily="@font/nanumsquareroundotfr"
                     android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent" android:id="@+id/textView7"/>
@@ -94,6 +107,8 @@
             android:text="주문 거절 사유를 선택해주세요"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/nanumsquareroundotfr"
+            android:textColor="#707070"
             android:id="@+id/textView2"
             android:layout_marginTop="16dp"
             app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
@@ -104,7 +119,7 @@
             android:layout_width="211dp"
             android:layout_height="46dp"
             android:id="@+id/constraintLayout5"
-            android:background="@drawable/border"
+            android:background="@drawable/self_writing"
             android:layout_marginTop="12dp"
             app:layout_constraintTop_toBottomOf="@+id/linear2" app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
@@ -117,8 +132,12 @@
                 android:inputType="textPersonName"
                 android:ems="10"
                 android:id="@+id/editText"
+                android:fontFamily="@font/nanumsquareroundotfr"
                 android:hint="직접 입력" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"/>
+
+
+
     </android.support.constraint.ConstraintLayout>
     <LinearLayout
             android:orientation="horizontal"
