--- a/app/src/main/res/layout/rv_item_done.xml
+++ b/app/src/main/res/layout/rv_item_done.xml
@@ -3,7 +3,9 @@
 <android.support.constraint.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_height="180dp"
+        xmlns:tools="http://schemas.android.com/tools"
+
+        android:layout_height="204dp"
         android:layout_width="match_parent">
 
     <android.support.constraint.ConstraintLayout
@@ -11,71 +13,131 @@
             xmlns:app="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools"
             android:background="@drawable/border"
-            android:layout_width="360dp"
-            android:layout_height="160dp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
+            android:layout_width="324dp"
+            android:layout_height="183dp" android:layout_marginTop="21dp" app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
             android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginLeft="8dp"
-    >
+            android:layout_marginLeft="8dp">
+
+        <android.support.constraint.ConstraintLayout
+                android:id="@+id/cl_rv_topbar"
+                android:layout_width="324dp"
+                      android:background="@color/warmgray"
+
+                      android:layout_height="30dp">
+            <TextView
+                    android:text="2018.12.29"
+                    android:textSize="13sp"
+                    android:fontFamily="@font/nanumsquareroundotfr"
+                    android:textColor="@color/black"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="12dp"
+                    android:layout_marginTop="9dp" android:layout_marginStart="16dp"
+                    android:id="@+id/tv_rvitem_done_date"/>
+            <TextView
+                    android:text="14:06"
+                    android:textColor="@color/black"
+                    android:fontFamily="@font/nanumsquareroundotfr"
+                    android:textSize="13sp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/tv_rvitem_done_time" android:layout_marginTop="9dp"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"/>
+            <TextView
+                    android:text="주문번호"
+                    android:fontFamily="@font/nanumsquareroundotfr"
+                    android:textSize="13sp"
+                    android:textColor="@color/black"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" android:layout_marginRight="16dp"
+                    android:layout_marginEnd="12dp" app:layout_constraintEnd_toEndOf="parent"
+                    android:id="@+id/tv_rvitem_done_ordernum"
+                    android:layout_marginTop="9dp" app:layout_constraintTop_toTopOf="parent"/>
+
+        </android.support.constraint.ConstraintLayout>
 
         <TextView
-                android:text="2018.12.29"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
-                android:layout_marginTop="16dp" android:layout_marginStart="16dp"
-                android:id="@+id/tv_rvitem_done_date"/>
-        <TextView
-                android:text="14:06"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/tv_rvitem_done_time" android:layout_marginTop="16dp"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"/>
-        <TextView
-                android:text="주문번호"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" android:layout_marginRight="16dp"
-                android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent"
-                android:id="@+id/tv_rvitem_done_ordernum"
-                android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent"/>
-        <TextView
                 android:text="닉네임"
+                android:textColor="@color/colorPrimary"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
-                android:layout_marginStart="16dp" android:id="@+id/tv_rvitem_done_nickname"
-                android:layout_marginTop="16dp"
-                app:layout_constraintTop_toBottomOf="@+id/tv_rvitem_done_date"/>
+                android:id="@+id/tv_rvitem_done_nickname"
+                android:layout_marginTop="8dp"
+                app:layout_editor_absoluteX="13dp"
+                app:layout_constraintTop_toBottomOf="@+id/cl_rv_topbar"/>
+
+                <!--tools:layout_editor_absoluteX="16dp"                />-->
+
         <TextView
-                android:text="아메리카노 ICE (Regular / 1개)"
+                android:text="아메리카노 ICE \n(Regular / 1개)"
+                android:textColor="@color/black"
+                android:textStyle="bold"
+
                 android:layout_width="wrap_content"
                 android:layout_height="16dp"
-                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
+                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="13dp"
                 android:layout_marginStart="16dp"
                 android:id="@+id/tv_rvitem_done_menu"
-                android:layout_marginTop="12dp" app:layout_constraintTop_toBottomOf="@+id/tv_rvitem_done_nickname"/>
+                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/tv_rvitem_done_nickname"/>
         <TextView
                 android:text="5000원"
+                android:textSize="13sp"
+                android:textColor="@color/black"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/tv_rvitem_done_cost"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintVertical_bias="0.366" app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginEnd="16dp" android:layout_marginRight="16dp"/>
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginEnd="24dp" android:layout_marginRight="24dp"/>
         <TextView
-                android:text="요청사항"
+                android:text="Relgular/1개"
+                android:textColor="@color/black"
+                android:fontFamily="@font/nanumsquareroundotfr"
+                android:textSize="13sp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/tv_rvitem_done_request" app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginLeft="16dp"
+                android:id="@+id/size_amount" app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginLeft="13dp"
                 android:layout_marginStart="16dp"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="1dp"
                 app:layout_constraintTop_toBottomOf="@+id/tv_rvitem_done_menu"
                 app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
                 android:layout_marginRight="16dp" app:layout_constraintHorizontal_bias="0.0"/>
+        <TextView
+                android:fontFamily="@font/nanumsquareroundotfr"
+                android:text="요청사항"
+                android:textColor="@color/warmgray"
+                android:textSize="13sp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/tv_rvitem_done_request" app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginLeft="13dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="10dp"
+                app:layout_constraintTop_toBottomOf="@+id/size_amount"
+                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
+                android:layout_marginRight="16dp" app:layout_constraintHorizontal_bias="0.0"/>
+        <!--<ImageView-->
+                <!--android:layout_width="109dp"-->
+                <!--android:layout_height="34dp"-->
+                <!--app:srcCompat="@drawable/menu_complete_btn_on"-->
+                <!--android:id="@+id/iv_rv_menu_complete_btn_on"-->
+                <!--/>-->
+
+        <!--<ImageView-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--app:srcCompat="@drawable/deliver_complete_btn_off"-->
+                <!--android:id="@+id/iv_rv_deliver_complete_btn_off"-->
+
+               <!--/>-->
+
+
     </android.support.constraint.ConstraintLayout>
 
 </android.support.constraint.ConstraintLayout>
