--- a/app/src/main/res/layout/dialog_waiting_accept.xml
+++ b/app/src/main/res/layout/dialog_waiting_accept.xml
@@ -1,9 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+<android.support.v7.widget.CardView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_width="250dp"
+        android:layout_height="350dp"
+        app:cardCornerRadius="16dp"
+        android:elevation="0dp"
+        android:background="@color/transparent"
+        app:cardBackgroundColor="@color/transparent">
 <android.support.constraint.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="match_parent"
-        android:layout_height="340dp" tools:layout_editor_absoluteY="25dp">
+        android:layout_width="250dp"
+        android:layout_height="350dp" tools:layout_editor_absoluteY="25dp">
 
 
     <LinearLayout
@@ -194,3 +204,4 @@
         </android.support.constraint.ConstraintLayout>
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
+</android.support.v7.widget.CardView>
