--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -22,4 +22,6 @@
     <color name="doneitem">#e9e9e9</color>
     <color name="doneitemtop">#f8f8f8</color>
 
+    <color name="a5gray">#a5a5a5</color>
+
 </resources>
